--- a/app/src/main/res/layout/fragment_list_contacts.xml
+++ b/app/src/main/res/layout/fragment_list_contacts.xml
@@ -56,16 +56,35 @@
                 android:inputType="number" />
         </LinearLayout>
 
-        <Button
-            android:id="@+id/saveBTN"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/saveBTN"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="@string/save" />
+
+            <Button
+                android:id="@+id/deleteBTN"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="@string/deleteAll" />
+        </LinearLayout>
+        <!--        <TextView-->
+        <!--            android:id="@+id/listTextTV"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"/>-->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerRV"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:text="@string/save" />
-        <TextView
-            android:id="@+id/listTextTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
+            tools:listitem="@layout/list_item" />
     </LinearLayout>
 </FrameLayout>
